zenith-sidecar/check_utf8.txt
cargo :     Checking 
zenith-sidecar v0.1.0 (C:\Use
rs\Asus\Desktop\ve\zenith-sid
ecar)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -FilePath "C:\Users\
Asus\Desktop\ve\zenit ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (    Che  
  cking ze...zenith-sideca   
 r):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`debug`
 --> src\proxy\mod.rs:4:28
  |
4 | use tracing::{info, 
error, debug};
  |                          
  ^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`warn`
  --> src\rpc.rs:16:21
   |
16 | use tracing::{info, 
warn};
   |                     ^^^^

warning: unused import: 
`GhostRegistry`
  --> src\rpc.rs:24:40
   |
24 | use 
crate::vfs::{ViewMode, 
GhostEntry, GhostRegistry};
   |                         
               ^^^^^^^^^^^^^

warning: unused import: 
`bail`
  --> src\vfs\mod.rs:32:22
   |
32 | use anyhow::{anyhow, 
bail, Context, Result};
   |                      
^^^^

warning: unused variable: 
`a_ts`
   --> src\conflict\ot_engine
.rs:386:90
    |
386 |                 Mutatio
nIntent::ExtractComponent { 
nodes, new_component_name, 
timestamp: a_ts },
    |                        
                             
                             
        ^^^^ help: if this 
is intentional, prefix it 
with an underscore: `_a_ts`
    |
    = note: 
`#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) 
on by default

warning: field `prefix` is 
never read
  --> src\hot_path\token_snap
per.rs:49:5
   |
45 | pub struct TokenScale {
   |            ---------- 
field in this struct
...
49 |     prefix: String,
   |     ^^^^^^
   |
   = note: `TokenScale` has 
derived impls for the traits 
`Clone` and `Debug`, but 
these are intentionally 
ignored during dead code 
analysis
   = note: 
`#[warn(dead_code)]` (part 
of `#[warn(unused)]`) on by 
default

warning: field `token` is 
never read
  --> src\patcher\template_li
teral.rs:86:5
   |
78 | struct LocatedToken {
   |        ------------ 
field in this struct
...
86 |     token: String,
   |     ^^^^^
   |
   = note: `LocatedToken` 
has derived impls for the 
traits `Clone` and `Debug`, 
but these are intentionally 
ignored during dead code 
analysis

warning: struct 
`LockfileGuard` is never 
constructed
   --> src\proxy\mod.rs:121:8
    |
121 | struct LockfileGuard(st
d::path::PathBuf);
    |        ^^^^^^^^^^^^^

warning: `zenith-sidecar` 
(lib) generated 8 warnings 
(run `cargo fix --lib -p 
zenith-sidecar` to apply 5 
suggestions)
warning: unused imports: 
`PrecomputedPatch` and 
`PredictCacheKey`
  --> src\main.rs:30:63
   |
30 | use zenith_sidecar::hot_
path::predictive::{Predictive
Patcher, PrecomputedPatch, 
PredictCacheKey};
   |                         
                             
         ^^^^^^^^^^^^^^^^  
^^^^^^^^^^^^^^^
   |
   = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

error[E0560]: struct `Args` 
has no field named 
`global_index_path`
   --> src\main.rs:115:39
    |
115 |     Args { workspace, 
sab_path, port, 
global_index_path, 
log_level, framework }
    |                        
               
^^^^^^^^^^^^^^^^^ unknown 
field
    |
help: a field with a similar 
name exists
    |
115 |     Args { workspace, 
sab_path, port, 
_global_index_path, 
log_level, framework }
    |                        
               +

error[E0560]: struct `Args` 
has no field named 
`log_level`
   --> src\main.rs:115:58
    |
115 |     Args { workspace, 
sab_path, port, 
global_index_path, 
log_level, framework }
    |                        
                             
     ^^^^^^^^^ unknown field
    |
help: a field with a similar 
name exists
    |
115 |     Args { workspace, 
sab_path, port, 
global_index_path, 
_log_level, framework }
    |                        
                             
     +

error[E0609]: no field 
`global_index_path` on type 
`Args`
   --> src\main.rs:161:33
    |
161 |     let 
ghost_index_path = 
args.global_index_path
    |                        
         ^^^^^^^^^^^^^^^^^ 
unknown field
    |
help: a field with a similar 
name exists
    |
161 |     let 
ghost_index_path = 
args._global_index_path
    |                        
         +

Some errors have detailed 
explanations: E0560, E0609.
For more information about 
an error, try `rustc 
--explain E0560`.
warning: `zenith-sidecar` 
(bin "zenith-sidecar") 
generated 1 warning
error: could not compile 
`zenith-sidecar` (bin 
"zenith-sidecar") due to 3 
previous errors; 1 warning 
emitted
